fix: tags wrap added for responsive

--- a/app/edit/[id]/EditPage.module.scss
+++ b/app/edit/[id]/EditPage.module.scss
@@ -26,6 +26,7 @@
 }
 
 .blog-title {
+	padding: 0 1rem;
 	border-bottom: 1px solid c.$border;
 }
 
